# TFM

./: .gitignore  LICENSE  marker_positions.yml
catkin_ws/: car_el_hybrid_08_99_01_01_x  car_el_hybrid_x  car_el_laser_x  frames.gv  map.pgm  map.yaml
catkin_ws/src/: core
catkin_ws/src/amcl_hybrid/: CMakeLists.txt  package.xml
catkin_ws/src/amcl_hybrid/cfg/: odom_params.yaml
catkin_ws/src/amcl_hybrid/include/amcl/sensors/: amcl_marker.h
catkin_ws/src/amcl_hybrid/launch/: amcl_hybrid.launch  amcl_launch.launch  amcl_launch_no_detector.launch  amcl_launch_rosbag_record.launch  amcl_vanilla_launch.launch
catkin_ws/src/amcl_hybrid/maps/: marker_positions.yml  marker_positions_car.yml  marker_positions_long_gallery.yml  marker_positions_long_hallway.yml
catkin_ws/src/amcl_hybrid/src/: amcl_node.cpp  isaac_odom_publisher.cpp
catkin_ws/src/amcl_hybrid/src/amcl/sensors/: amcl_marker.cpp
catkin_ws/src/amcl_hybrid/src/odometry/: odometry.cpp
catkin_ws/src/detector/: CMakeLists.txt
catkin_ws/src/detector/include/detector/: marcador.h
catkin_ws/src/rectangle_detector/: CMakeLists.txt  package.xml
catkin_ws/src/rectangle_detector/config/: depth_registered.yaml  rgb.yaml  rviz_visualizer.rviz
catkin_ws/src/rectangle_detector/include/: rectangle_detector_node.hpp
catkin_ws/src/rectangle_detector/launch/: rectangle_detector_minimal.launch  rectangle_detector_orbec.launch  rectangle_detector_sim.launch  rtabmap.launch
catkin_ws/src/rectangle_detector/src/: SuperPoint.cc  rectangle_detector_node.cpp  rectdect.cpp  rectdect.txt
catkin_ws/src/run_amcl/: test_amcl.rviz
docker/compose/: .env  Dockerfile  docker-compose.yml
docker/compose/deploy/: .env  docker-compose.yml
docker/compose/portable/: docker-compose.yml
docker/cuda/: .env  Dockerfile
docker/legacy/: alias.txt
dockerfiles/compose/: Dockerfile  docker-compose.yml
dockerfiles/cuda/: Dockerfile  docker-compose.yml
maps/: car.pgm  car.yaml  car_elongated.pgm  long_gallery.yaml  long_hallway.yaml  map.pgm  map.yaml  map_g.pgm  map_g.yaml  map_mocap.yaml  marker_map_from_mocap.py  marker_map_omni_translate.py  marker_positions.yml  mocap.pgm  mocap.yaml
maps/warehouse/: map.yaml
results/car_el_1/: car_el_hybrid  car_el_laser  car_el_marker  plotjuggler_all.xml  plotjuggler_car.xml
results/car_el_2/: car_el_hybrid  car_el_laser  car_el_marker  plotjuggler_car.xml
results/car_el_3/: car_el_hybrid  car_el_laser  car_el_marker  plotjuggler_car.xml
results/car_el_4/: plotjuggler_car.xml
results/car_el_5/: plotjuggler_hybrid.xml  plotjuggler_hybrid2.xml  plotjuggler_laser.xml  plotjuggler_marker.xml
results/car_od_1/: plotjuggler.xml
results/long_gall_1/: plotjuggler.xml
results/long_hall_2/: plotjuggler.xml
rosbags/: rosbag_editor_hallway.py  rosbag_editor_mocap.py  rosbag_editor_remove_x.py  rosbag_infos.txt
simulation/: TiagoROSSensors.usd  TiagoROSTeleop.usd  TiagoROSgt.usd  TiagoROStf.usd  long_gallery.usd  long_hallway.usd  mocap.usd  tiago_robot.urdf  warehouse.usd
simulation/omni/: office_tiago.usd
simulation/omni/tiago_base/: tiago_base.usd
workspaces/ign-omni/: Dockerfile
workspaces/ros-melodic/: Dockerfile
workspaces/ros-noetic/: Dockerfile
