<?xml version="1.0"?>
<package format="2">
    <name>amcl_hybrid</name>
    <version>1.14.2</version>
    <description>
        <p>
            amcl is a probabilistic localization system for a robot moving in
            2D. It implements the adaptive (or KLD-sampling) Monte Carlo
            localization approach (as described by Dieter Fox), which uses a
            particle filter to track the pose of a robot against a known map.
        </p>
        <p>
            This node is derived, with thanks, from Andrew Howard's excellent
            'amcl' Player driver.
        </p>
    </description>
    <url>http://wiki.ros.org/amcl</url>
    <author>Brian P. Gerkey</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <maintainer email="miguelbeteta5@gmail.com">MiguelBtt</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    

    <build_depend>rosbag</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    
    <build_depend>tf</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>detector</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>visualization_msgs</build_depend>

    <build_export_depend>rosbag</build_export_depend>
    <build_export_depend>dynamic_reconfigure</build_export_depend>
    <build_export_depend>message_filters</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_srvs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>visualization_msgs</build_export_depend>
    
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>tf2</build_export_depend>
    <build_export_depend>detector</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>image_geometry</build_export_depend>
    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>visualization_msgs</build_export_depend>

    <exec_depend>rosbag</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>

    <exec_depend>tf2</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>image_geometry</exec_depend>
    <exec_depend>detector</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <test_depend>rostest</test_depend>
    <test_depend>map_server</test_depend>
</package>
